--- a/index.html
+++ b/index.html
@@ -2,16 +2,140 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
-
   <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim
-      veniam, quis nostrud exercitation.
-    </p>
+    <!--header-->
+    <header>
+      <!--navigation-->
+      <nav>
+        <ul>
+          <li>
+            <a href="#">WebStudio</a>
+          </li>
+          <li>
+            <a href="#">Studio</a>
+          </li>
+          <li>
+            <a href="#">Portfolio</a>
+          </li>
+          <li>
+            <a href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <!--email&phone-->
+      <div>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
+      </div>
+    </header>
+    <!--Main-->
+    <main>
+      <!--button-->
+      <section>
+        <h1>
+          Effective Solutions<br />
+          for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!--MainText-->
+      <section>
+        <div>
+          <h2>Strategy</h2>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </div>
+        <div>
+          <h2>Punctuality</h2>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </div>
+        <div>
+          <h2>Diligence</h2>
+          <p>
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </div>
+        <div>
+          <h2>Technologies</h2>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </div>
+      </section>
+      <!--OurTeam-->
+      <section>
+        <h1>Our Team</h1>
+        <!--Mark-->
+        <section>
+          <img
+            src="./images/img (3).jpg"
+            alt="Mark Guerrero"
+            width="264"
+            height="260"
+          />
+          <section>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </section>
+        </section>
+        <!--Tom-->
+        <section>
+          <img
+            src="./images/img (2).jpg"
+            alt="Tom Ford"
+            width="264"
+            height="260"
+          />
+          <section>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </section>
+        </section>
+        <!--Camila-->
+        <section>
+          <img
+            src="./images/img.jpg"
+            alt="Camila Garcia"
+            width="264"
+            height="260"
+          />
+          <section>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </section>
+        </section>
+        <!--Daniel-->
+        <section>
+          <img src="./images/img (1).jpg" alt="Daniel Wilson" />
+          <section>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </section>
+        </section>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <a href="#">WebStudio</a>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
