--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
         </section>
         <!--Daniel-->
         <section>
-          <img src="./images/img (1).jpg" alt="Daniel Wilson" />
+          <img
+            src="./images/img (1).jpg"
+            alt="Daniel Wilson"
+            width="264"
+            height="260"
+          />
           <section>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
