--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li>
             <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
           </li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </div>
     </header>
@@ -46,43 +46,43 @@
         <button type="button">Order Service</button>
       </section>
       <!--MainText-->
-      <section>
-        <div>
+      <div>
+        <section>
           <h2>Strategy</h2>
           <p>
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
-        </div>
-        <div>
+        </section>
+        <section>
           <h2>Punctuality</h2>
           <p>
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
-        </div>
-        <div>
+        </section>
+        <section>
           <h2>Diligence</h2>
           <p>
             Research and confirm brands with the strongest digital growth
             opportunities and minimize risk.
           </p>
-        </div>
-        <div>
+        </section>
+        <section>
           <h2>Technologies</h2>
           <p>
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
-        </div>
-      </section>
+        </section>
+      </div>
       <!--OurTeam-->
       <section>
         <h1>Our Team</h1>
         <!--Mark-->
-        <section>
+        <div>
           <img
-            src="./images/img (3).jpg"
+            src="./images/img(3).jpg"
             alt="Mark Guerrero"
             width="264"
             height="260"
@@ -91,11 +91,11 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </section>
-        </section>
+        </div>
         <!--Tom-->
-        <section>
+        <div>
           <img
-            src="./images/img (2).jpg"
+            src="./images/img(2).jpg"
             alt="Tom Ford"
             width="264"
             height="260"
@@ -104,9 +104,9 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </section>
-        </section>
+        </div>
         <!--Camila-->
-        <section>
+        <div>
           <img
             src="./images/img.jpg"
             alt="Camila Garcia"
@@ -117,11 +117,11 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </section>
-        </section>
+        </div>
         <!--Daniel-->
-        <section>
+        <div>
           <img
-            src="./images/img (1).jpg"
+            src="./images/img(1).jpg"
             alt="Daniel Wilson"
             width="264"
             height="260"
@@ -130,17 +130,17 @@
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </section>
-        </section>
+        </div>
       </section>
     </main>
     <footer>
-      <section>
+      <div>
         <a href="#">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
