--- a/index.html
+++ b/index.html
@@ -8,76 +8,61 @@
   <body>
     <!--header-->
     <header>
-      <!--navigation-->
+      WebStudio
       <nav>
         <ul>
-          <li>
-            <div>
-              <a href="#">WebStudio</a>
-            </div>
-          </li>
-          <li>
-            <a href="#">Studio</a>
-          </li>
-          <li>
-            <a href="#">Portfolio</a>
-          </li>
-          <li>
-            <a href="#">Contacts</a>
-          </li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <!--email&phone-->
-      <div>
+      <address>
         <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
-          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </div>
+      </address>
     </header>
     <!--Main-->
     <main>
       <!--button-->
       <section>
-        <h1>
-          Effective Solutions<br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!--MainText-->
-      <section>
-        <section>
-          <h2>Strategy</h2>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </section>
-        <section>
-          <h2>Punctuality</h2>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </section>
-        <section>
-          <h2>Diligence</h2>
-          <p>
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
-          </p>
-        </section>
-        <section>
-          <h2>Technologies</h2>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </section>
-      </section>
+      <div>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </div>
       <!--OurTeam-->
       <section>
         <h2>Our Team</h2>
@@ -131,7 +116,7 @@
     </main>
     <footer>
       <div>
-        <a href="#">WebStudio</a>
+        WebStudio
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
