--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
     <!--header-->
     <header>
-      WebStudio
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -25,103 +25,101 @@
     </header>
     <!--Main-->
     <main>
-      <!--button-->
+      <!-- First Section: Button -->
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h1>
+          Effective Solutions<br />
+          for Your Business
+        </h1>
         <button type="button">Order Service</button>
       </section>
-      <!--MainText-->
-      <div>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
-      <!--OurTeam-->
+
+      <!-- Second Section: Main Text -->
       <section>
-        <h2>Our Team</h2>
-        <ul>
-          <!--Mark-->
-          <li>
-            <img
-              src="./images/img(3).jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
+        <h2>Strategy</h2>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h2>Punctuality</h2>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h2>Diligence</h2>
+        <p>
+          Research and confirm brands with the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h2>Technologies</h2>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+
+      <!-- Third Section: Our Team -->
+      <section>
+        <h1>Our Team</h1>
+        <div>
+          <img
+            src="./images/img(3).jpg"
+            alt="Mark Guerrero"
+            width="264"
+            height="260"
+          />
+          <section>
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-          </li>
-          <!--Tom-->
-          <li>
-            <img
-              src="./images/img(2).jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
+          </section>
+        </div>
+        <div>
+          <img
+            src="./images/img(2).jpg"
+            alt="Tom Ford"
+            width="264"
+            height="260"
+          />
+          <section>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-          </li>
-          <!--Camila-->
-          <li>
-            <img
-              src="./images/img.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
+          </section>
+        </div>
+        <div>
+          <img
+            src="./images/img.jpg"
+            alt="Camila Garcia"
+            width="264"
+            height="260"
+          />
+          <section>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-          </li>
-          <!--Daniel-->
-          <li>
-            <img
-              src="./images/img(1).jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
+          </section>
+        </div>
+        <div>
+          <img
+            src="./images/img(1).jpg"
+            alt="Daniel Wilson"
+            width="264"
+            height="260"
+          />
+          <section>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-          </li>
-        </ul>
+          </section>
+        </div>
       </section>
     </main>
     <footer>
-      <div>
-        WebStudio
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <!-- Логотип -->
+      <a href="./index.html">WebStudio</a>
+
+      <!-- Параграф -->
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
