--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
     <main>
       <!-- First Section: Button -->
       <section>
-        <h1>
-          Effective Solutions<br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
