--- a/index.html
+++ b/index.html
@@ -8,56 +8,75 @@
   <body>
     <!--header-->
     <header>
+      <!--navigation-->
       <nav>
-        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li>
+            <a href="#">WebStudio</a>
+          </li>
+          <li>
+            <a href="#">Studio</a>
+          </li>
+          <li>
+            <a href="#">Portfolio</a>
+          </li>
+          <li>
+            <a href="#">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <!--email&phone-->
+      <div>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+          </li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </address>
+      </div>
     </header>
     <!--Main-->
     <main>
-      <!-- First Section: Button -->
+      <!--button-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-
-      <!-- Second Section: Main Text -->
-      <section>
-        <h2>Strategy</h2>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h2>Punctuality</h2>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h2>Diligence</h2>
-        <p>
-          Research and confirm brands with the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h2>Technologies</h2>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </section>
-
-      <!-- Third Section: Our Team -->
+      <!--MainText-->
+      <div>
+        <section>
+          <h2>Strategy</h2>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </section>
+        <section>
+          <h2>Punctuality</h2>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </section>
+        <section>
+          <h2>Diligence</h2>
+          <p>
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </section>
+        <section>
+          <h2>Technologies</h2>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </section>
+      </div>
+      <!--OurTeam-->
       <section>
         <h1>Our Team</h1>
+        <!--Mark-->
         <div>
           <img
             src="./images/img(3).jpg"
@@ -70,6 +89,7 @@
             <p>Product Designer</p>
           </section>
         </div>
+        <!--Tom-->
         <div>
           <img
             src="./images/img(2).jpg"
@@ -82,6 +102,7 @@
             <p>Frontend Developer</p>
           </section>
         </div>
+        <!--Camila-->
         <div>
           <img
             src="./images/img.jpg"
@@ -94,6 +115,7 @@
             <p>Marketing</p>
           </section>
         </div>
+        <!--Daniel-->
         <div>
           <img
             src="./images/img(1).jpg"
@@ -109,14 +131,13 @@
       </section>
     </main>
     <footer>
-      <!-- Логотип -->
-      <a href="./index.html">WebStudio</a>
-
-      <!-- Параграф -->
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div>
+        <a href="#">WebStudio</a>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
