--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <header>
       <!--navigation-->
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>
-            <a href="#">WebStudio</a>
-          </li>
           <li>
             <a href="#">Studio</a>
           </li>
@@ -26,14 +24,16 @@
         </ul>
       </nav>
       <!--email&phone-->
-      <div>
+      <address>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
-      </div>
+      </address>
     </header>
     <!--Main-->
     <main>
@@ -43,36 +43,36 @@
         <button type="button">Order Service</button>
       </section>
       <!--MainText-->
-      <div>
-        <section>
-          <h2>Strategy</h2>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </section>
-        <section>
-          <h2>Punctuality</h2>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </section>
-        <section>
-          <h2>Diligence</h2>
-          <p>
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
-          </p>
-        </section>
-        <section>
-          <h2>Technologies</h2>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </section>
-      </div>
+
+      <section>
+        <h2>Strategy</h2>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+      </section>
+      <section>
+        <h2>Punctuality</h2>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+      </section>
+      <section>
+        <h2>Diligence</h2>
+        <p>
+          Research and confirm brands with the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+      </section>
+      <section>
+        <h2>Technologies</h2>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+
       <!--OurTeam-->
       <section>
         <h1>Our Team</h1>
@@ -132,7 +132,7 @@
     </main>
     <footer>
       <div>
-        <a href="#">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
