--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -45,37 +45,41 @@
       <!--MainText-->
 
       <section>
-        <h2>Strategy</h2>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-      </section>
-      <section>
-        <h2>Punctuality</h2>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </section>
-      <section>
-        <h2>Diligence</h2>
-        <p>
-          Research and confirm brands with the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </section>
-      <section>
-        <h2>Technologies</h2>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <!--OurTeam-->
       <section>
-        <h1>Our Team</h1>
+        <h2>Our Team</h2>
         <!--Mark-->
         <div>
           <img
