--- a/index.html
+++ b/index.html
@@ -81,67 +81,69 @@
       <section>
         <h2>Our Team</h2>
         <!--Mark-->
-        <div>
-          <img
-            src="./images/img(3).jpg"
-            alt="Mark Guerrero"
-            width="264"
-            height="260"
-          />
-          <section>
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </section>
-        </div>
-        <!--Tom-->
-        <div>
-          <img
-            src="./images/img(2).jpg"
-            alt="Tom Ford"
-            width="264"
-            height="260"
-          />
-          <section>
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </section>
-        </div>
-        <!--Camila-->
-        <div>
-          <img
-            src="./images/img.jpg"
-            alt="Camila Garcia"
-            width="264"
-            height="260"
-          />
-          <section>
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </section>
-        </div>
-        <!--Daniel-->
-        <div>
-          <img
-            src="./images/img(1).jpg"
-            alt="Daniel Wilson"
-            width="264"
-            height="260"
-          />
-          <section>
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </section>
-        </div>
+        <ul>
+          <li>
+            <img
+              src="./images/img(3).jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <section>
+              <h3>Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </section>
+          </li>
+
+          <!--Tom-->
+          <li>
+            <img
+              src="./images/img(2).jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <section>
+              <h3>Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </section>
+          </li>
+          <!--Camila-->
+          <li>
+            <img
+              src="./images/img.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <section>
+              <h3>Camila Garcia</h3>
+              <p>Marketing</p>
+            </section>
+          </li>
+
+          <!--Daniel-->
+          <li>
+            <img
+              src="./images/img(1).jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <section>
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </section>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
-      <div>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
