--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <!--MainText-->
 
       <section>
+        <h2>Our Futures</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -89,10 +90,9 @@
               width="264"
               height="260"
             />
-            <section>
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </section>
+
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
 
           <!--Tom-->
@@ -103,10 +103,9 @@
               width="264"
               height="260"
             />
-            <section>
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </section>
+
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <!--Camila-->
           <li>
@@ -116,10 +115,9 @@
               width="264"
               height="260"
             />
-            <section>
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </section>
+
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
 
           <!--Daniel-->
@@ -130,10 +128,9 @@
               width="264"
               height="260"
             />
-            <section>
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </section>
+
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
